--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.taahyt</groupId>
     <artifactId>pubsubhubbub</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 
     <properties>
